# Super-Nate-Boyer

./: .gitignore  CMakeLists.txt  README.md
assets/: bookshelf.xcf  floor.xcf  snbspritesheetUPDATE.xcf
include/: animatedObj.h  button.h  closeSDL.h  font.h  game.h  includeSDL.h  inputHandler.h  menu.h  player.h  renderObj.h  timer.h  window.h
src/: animatedObj.cpp  button.cpp  closeSDL.cpp  font.cpp  game.cpp  gameMenus.cpp  inputHandler.cpp  main.cpp  menu.cpp  renderObj.cpp  timer.cpp  window.cpp
